<resources>
    <string name="app_name">DeepDiveAndroid</string>
    <string name="single_player">Single Player</string>
    <string name="pass_play"><![CDATA[Pass & Play]]></string>
    <string name="multiplayer">Multiplayer</string>
    <string name="stay">STAY</string>
    <string name="leave">LEAVE</string>
    <string name="player_name">player name</string>
    <string name="continue_button">Continue</string>
    <string name="pass_device">PASS THE DEVICE TO</string>
    <string name="player_icon">player icon</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="card_icon">card icon</string>
    <string name="place_center">PLACE DEVICE IN THE CENTER OF TABLE</string>
    <string name="draw_card">DRAW CARD</string>
    <string name="questionmark">\?</string>

</resources>
